--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo-task-manager": "~13.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
