--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~7.1.7",
     "expo-location": "^18.1.6",
     "expo-router": "~5.1.4",
@@ -46,7 +47,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "expo-task-manager": "~13.1.6"
+    "expo-task-manager": "~13.1.6",
+    "expo-camera": "~16.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
