--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
     "expo-bluetooth": "^0.0.0",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "5.2.4",
     "expo-font": "~13.3.2",
@@ -33,7 +35,9 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
+    "lucide-react-native": "^0.547.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -46,9 +50,8 @@
     "react-native-webview": "13.13.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "expo-task-manager": "~13.1.6",
-    "expo-camera": "~16.1.11"
+    "react-native-svg": "15.11.2",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
